perf: add open-loop JVM producer harness